# Portable-Inspection-Edge-Node

./: .gitignore  CMakeLists.txt  InspectionEdgeNode.ino  README.md
.idx/: dev.nix
include/: camera.h  comms.h  processing.h  sensors.h  storage.h
src/: ISensor.h  IStorage.h  camera.c  comms.c  main.c  main_simulation.cpp  processing.c  sensors.c  storage.c
src/Core/: EdgeProcessor.cpp  EdgeProcessor.h  PacketBuilder.h  SerialProtocol.h
src/HAL/: EspCamera.h  ICamera.h
src/Mocks/: FileCamera.h  MockCamera.h
tests/: main_test.cpp
